syntax = "proto3";

package player.v1;
option go_package = "player/v1;playerv1";

import "player/v1/player.proto";

import "validate/validate.proto";
import "google/protobuf/empty.proto";

// EmailService is a service for managing player email.
service EmailService {
  // UpdateEmail updates player email.
  rpc UpdateEmail (UpdateEmailRequest) returns (UpdateEmailResponse);

  // VerifyEmail verifies player email by provided code.
  rpc VerifyEmail (VerifyEmailRequest) returns (google.protobuf.Empty);
  
  // SendVerification sends creates verification token and sends it to player email.
  rpc SendVerification (google.protobuf.Empty) returns (google.protobuf.Empty);
}

message UpdateEmailRequest {
  string new_email = 1 [(validate.rules).string = { email: true }]; // required
  string password = 2; // required
}

message UpdateEmailResponse {
  Player player = 1;
}

message VerifyEmailRequest {
  string token = 1 [(validate.rules).string = { len: 64 }]; // required
}